Update 'gegas2i2o-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe-java-quarkus:294d3d3aa2cfd4ca6edd92d213f213768fde9afe@sha256:68b582cf9cdff20484b7008195410f72f8031540674f7a24d5c390e3a79d0fb8

--- a/components/gegas2i2o-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/gegas2i2o-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: gegas2i2o-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-quarkus:294d3d3aa2cfd4ca6edd92d213f213768fde9afe@sha256:68b582cf9cdff20484b7008195410f72f8031540674f7a24d5c390e3a79d0fb8
+          name: container-image
